ET - Se añadio la carpeta claseFormularios; se añadio el archivo html de clase video y se agregaron formularios.

--- a/claseImg-video/video.html
+++ b/claseImg-video/video.html
@@ -9,7 +9,14 @@
 </head>
 <body>
     <main>
-        
+        <section>
+            <video controls preload="auto">
+                <source src="img/3042473-hd_1280_720_30fps.mp4" >
+            </video>
+            <video controls preload="auto">
+                <source src="img/3042473-hd_1280_720_30fps.mp4#t=06,12"> <!--Source permite que ingresemos diferentes tipos de video y que el navegador decida cual renderizar-->
+            </video> <!--#t=segundoInicio, SegundoFin-->
+        </section>
     </main>
 </body>
 </html>
